# ymediaplayer

./: .gitignore  CMakeLists.txt  README.md  Record.md
cmake/: QtChooser.cmake  color.cmake  function.cmake  utils.cmake
res/image/: image.qrc
src/: CMakeLists.txt  main.cc  skin.qrc
src/GL/: CMakeLists.txt
src/global/: CMakeLists.txt  appdef.h  confile.h
src/hv/: CMakeLists.txt  hconfig.h
src/hv/utils/: FILESLISTS.TXT  export.bat
src/qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  qtfunctions.h  qtheaders.h  qtstyles.h  videowidget.cpp  videowidget.h  wintitlebar.cpp  wintitlebar.h  wintoolbar.cpp  wintoolbar.h
src/third/: CMakeLists.txt
src/third/spdlog/: ylog.cpp
src/util/: CMakeLists.txt  yframe.h  ygl.h
third/: CMakeLists.txt
